--- a/CC31B-TeamRAR/MainWindow.xaml
+++ b/CC31B-TeamRAR/MainWindow.xaml
@@ -30,8 +30,37 @@
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0" Content="Player Stats" Background="#B9B4C7"/>
+            <Label Grid.Row="0" Grid.Column="0" Background="#B9B4C7"/>
             <Label Grid.Row="1" Grid.Column="0" Content="Player Image" Background="#B9B4C7"/>
+
+            <Grid Grid.Row="0" Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Label Grid.Row="0" Grid.Column="0" Content="Name"/>
+                <Label Grid.Row="0" Grid.Column="1" Content="{Binding CurrentPlayer.Name}"/>
+                <Label Grid.Row="1" Grid.Column="0" Content="Character Class"/>
+                <Label Grid.Row="1" Grid.Column="1" Content="{Binding CurrentPlayer.CharacterClass}"/>
+                <Label Grid.Row="2" Grid.Column="0" Content="HitPoints"/>
+                <Label Grid.Row="2" Grid.Column="1" Content="{Binding CurrentPlayer.HitPoints}"/>
+                <Label Grid.Row="3" Grid.Column="0" Content="ExperiencePoints"/>
+                <Label Grid.Row="3" Grid.Column="1" Content="{Binding CurrentPlayer.ExperiencePoints}"/>
+                <Label Grid.Row="4" Grid.Column="0" Content="Level"/>
+                <Label Grid.Row="4" Grid.Column="1" Content="{Binding CurrentPlayer.Level}"/>
+                <Label Grid.Row="5" Grid.Column="0" Content="Gold"/>
+                <Label Grid.Row="5" Grid.Column="1" Content="{Binding CurrentPlayer.Gold}"/>
+
+
+            </Grid>
         </Grid>
 
         <Label Grid.Row="2" Grid.Column="0" Content="Inventory and Quests" Background="#FFC4C4"/>
