--- a/CC31B-TeamRAR/MainWindow.xaml
+++ b/CC31B-TeamRAR/MainWindow.xaml
@@ -58,7 +58,7 @@
                 <Label Grid.Row="4" Grid.Column="1" Content="{Binding CurrentPlayer.Level}"/>
                 <Label Grid.Row="5" Grid.Column="0" Content="Gold"/>
                 <Label Grid.Row="5" Grid.Column="1" Content="{Binding CurrentPlayer.Gold}"/>
-
+                <Button Grid.Row="6" Grid.Column="1" Content="Add Gold" Click="ButtonBase_OnClick"/>
 
             </Grid>
         </Grid>
