--- a/CC31B-TeamRAR/MainWindow.xaml
+++ b/CC31B-TeamRAR/MainWindow.xaml
@@ -6,7 +6,11 @@
         xmlns:local="clr-namespace:CC31B_TeamRAR"
         mc:Ignorable="d"
         Title="The Choco Cherry Chase" Height="768" Width="1024">
-    <Grid>
+
+    <Window.Resources>
+        <BooleanToVisibilityConverter x:Key="BooleanToVisibility"/>
+    </Window.Resources>
+        <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
@@ -128,19 +132,23 @@
             <Button Grid.Row="0" Grid.Column="1"
                     Height="25" Width="65" Margin="8"
                     Content="North"
-                    Click="OnClick_MoveNorth"/>
+                    Click="OnClick_MoveNorth"
+                    Visibility="{Binding HasLocationToNorth, Converter={StaticResource BooleanToVisibility}}"/>
             <Button Grid.Row="1" Grid.Column="0" 
                     Height="25" Width="65" Margin="8"
                     Content="West"
-                    Click="OnClick_MoveWest"/>
+                    Click="OnClick_MoveWest"
+                    Visibility="{Binding HasLocationToWest, Converter={StaticResource BooleanToVisibility}}"/>
             <Button Grid.Row="1" Grid.Column="2" 
                     Height="25" Width="65" Margin="8"
                     Content="East"
-                    Click="OnClick_MoveEast"/>
+                    Click="OnClick_MoveEast"
+                    Visibility="{Binding HasLocationToEast, Converter={StaticResource BooleanToVisibility}}"/>
             <Button Grid.Row="2" Grid.Column="1" 
                     Height="25" Width="65" Margin="8"
                     Content="South"
-                    Click="OnClick_MoveSouth"/>
+                    Click="OnClick_MoveSouth"
+                    Visibility="{Binding HasLocationToSouth, Converter={StaticResource BooleanToVisibility}}"/>
         </Grid>
     </Grid>
     
