hala hindi nag work

--- a/CC31B-TeamRAR/MainWindow.xaml
+++ b/CC31B-TeamRAR/MainWindow.xaml
@@ -133,7 +133,7 @@
                 </Grid>
             </Border>
         </Grid>
-        <!-- Inventory and Quests -->
+        <!-- Inventory, Quests, and Recipes -->
         <Grid Grid.Row="2" Grid.Column="0"
               Background="BurlyWood">
             <TabControl>
@@ -169,6 +169,28 @@
                         </DataGrid.Columns>
                     </DataGrid>
                 </TabItem>
+
+				<TabItem Header="Recipes">
+					<DataGrid ItemsSource="{Binding CurrentPlayer.Recipes}"
+                              AutoGenerateColumns="False"
+                              HeadersVisibility="Column">
+						<DataGrid.Columns>
+							<DataGridTextColumn Header="Name"
+                                                Binding="{Binding Name}"
+                                                Width="*"/>
+							<DataGridTemplateColumn MinWidth="75">
+								<DataGridTemplateColumn.CellTemplate>
+									<DataTemplate>
+										<Button Click="OnClick_Craft"
+                                                Width="55"
+                                                Content="Craft"/>
+									</DataTemplate>
+								</DataGridTemplateColumn.CellTemplate>
+							</DataGridTemplateColumn>
+						</DataGrid.Columns>
+					</DataGrid>
+				</TabItem>
+				
             </TabControl>
         </Grid>
         <!-- Action controls -->
@@ -183,7 +205,6 @@
             </Grid.ColumnDefinitions>
             <!-- Combat Controls -->
             <Grid Grid.Row="0" Grid.Column="0"
-                  Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}"
                   HorizontalAlignment="Center"
                   VerticalAlignment="Center">
                 <Grid.RowDefinitions>
@@ -195,14 +216,27 @@
                     <ColumnDefinition Width="10"/>
                     <ColumnDefinition Width="50"/>
                 </Grid.ColumnDefinitions>
+				
                 <ComboBox Grid.Row="0" Grid.Column="0"
+						  Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}"
                           ItemsSource="{Binding CurrentPlayer.Weapons}"
                           SelectedItem="{Binding CurrentPlayer.CurrentWeapon}"
                           DisplayMemberPath="Name"
                           SelectedValuePath="ID"/>
                 <Button Grid.Row="0" Grid.Column="2"
+						Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}"
                         Content="Use"
                         Click="OnClick_AttackMonster"/>
+				
+				<ComboBox Grid.Row="1" Grid.Column="0"
+                          Visibility="{Binding CurrentPlayer.HasConsumable, Converter={StaticResource BooleanToVisibility}}"
+                          ItemsSource="{Binding CurrentPlayer.Consumables}"
+                          SelectedItem="{Binding CurrentPlayer.CurrentConsumable}"
+                          DisplayMemberPath="Name"/>
+				<Button Grid.Row="1" Grid.Column="2"
+                        Visibility="{Binding CurrentPlayer.HasConsumable, Converter={StaticResource BooleanToVisibility}}"
+                        Content="Use"
+                        Click="OnClick_UseCurrentConsumable"/>
             </Grid>
             <!-- Movement Controls -->
             <Grid Grid.Row="0" Grid.Column="1">
