--- a/CC31B-TeamRAR/MainWindow.xaml
+++ b/CC31B-TeamRAR/MainWindow.xaml
@@ -79,6 +79,11 @@
                 </RichTextBox>
             </Border>
             <!-- Location information -->
+            <Image Grid.Row="0" Grid.Column="1"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   Stretch="UniformToFill"
+                   Source="{Binding CurrentLocation.ImageName}"/>
             <Border Grid.Row="0" Grid.Column="1"
                     BorderBrush="Gainsboro"
                     BorderThickness="1">
@@ -90,20 +95,22 @@
                     </Grid.RowDefinitions>
                     <TextBlock Grid.Row="0"
                                HorizontalAlignment="Center"
+                               Background="AliceBlue"
                                Text="{Binding CurrentLocation.Name}"/>
-                    <Image Grid.Row="1"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Height="125"
-                           Width="125"
-                           Source="{Binding CurrentLocation.ImageName}"/>
+                    
                     <TextBlock Grid.Row="2"
                                HorizontalAlignment="Center"
+                               Background="AliceBlue"
                                Text="{Binding CurrentLocation.Description}"
                                TextWrapping="Wrap"/>
                 </Grid>
             </Border>
             <!-- Monster information -->
+            <Image Grid.Row="1" Grid.Column="1"
+                   HorizontalAlignment="Center"
+                   VerticalAlignment="Center"
+                   Stretch="Uniform"
+                   Source="{Binding CurrentMonster.ImageName}" />
             <Border Grid.Row="1" Grid.Column="1"
                     BorderBrush="Gainsboro"
                     BorderThickness="1">
@@ -116,16 +123,13 @@
                     <TextBlock Grid.Row="0"
                                HorizontalAlignment="Center"
                                Height="Auto"
+                               Background="AliceBlue"
                                Text="{Binding CurrentMonster.Name}" />
-                    <Image Grid.Row="1"
-                           HorizontalAlignment="Center"
-                           VerticalAlignment="Center"
-                           Height="125"
-                           Width="125"
-                           Source="{Binding CurrentMonster.ImageName}" />
+                    
                     <StackPanel Grid.Row="2"
                                 Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}"
                                 HorizontalAlignment="Center"
+                                Background="AliceBlue"
                                 Orientation="Horizontal">
                         <TextBlock>Current Hit Points: </TextBlock>
                         <TextBlock Text="{Binding CurrentMonster.CurrentHitPoints}" />
@@ -221,21 +225,25 @@
 						  Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}"
                           ItemsSource="{Binding CurrentPlayer.Weapons}"
                           SelectedItem="{Binding CurrentPlayer.CurrentWeapon}"
+                          Margin="3"
                           DisplayMemberPath="Name"
                           SelectedValuePath="ID"/>
                 <Button Grid.Row="0" Grid.Column="2"
 						Visibility="{Binding HasMonster, Converter={StaticResource BooleanToVisibility}}"
                         Content="Use"
+                        Margin="3"
                         Click="OnClick_AttackMonster"/>
-				
-				<ComboBox Grid.Row="1" Grid.Column="0"
+
+                <ComboBox Grid.Row="1" Grid.Column="0"
                           Visibility="{Binding CurrentPlayer.HasConsumable, Converter={StaticResource BooleanToVisibility}}"
                           ItemsSource="{Binding CurrentPlayer.Consumables}"
                           SelectedItem="{Binding CurrentPlayer.CurrentConsumable}"
-                          DisplayMemberPath="Name"/>
+                          Margin="3"
+                          DisplayMemberPath="Name" />
 				<Button Grid.Row="1" Grid.Column="2"
                         Visibility="{Binding CurrentPlayer.HasConsumable, Converter={StaticResource BooleanToVisibility}}"
                         Content="Use"
+                        Margin="3"
                         Click="OnClick_UseCurrentConsumable"/>
             </Grid>
             <!-- Movement Controls -->
