--- a/CC31B-TeamRAR/MainWindow.xaml
+++ b/CC31B-TeamRAR/MainWindow.xaml
@@ -146,6 +146,16 @@
                               Background="#FFC4C4"
                               HeadersVisibility="Column">
                         <DataGrid.Columns>
+                            <DataGridTemplateColumn Header="Image"
+                                                    Width="50"
+                                                    >
+                                <DataGridTemplateColumn.CellTemplate>
+                                    <DataTemplate>
+                                        <Image Source="{Binding Item.ImageName}"
+                                                   Width="25"/>
+                                    </DataTemplate>
+                                </DataGridTemplateColumn.CellTemplate>
+                            </DataGridTemplateColumn>
                             <DataGridTextColumn Header="Description"
                                                 Binding="{Binding Item.Name}"
                                                 Width="*"/>
