--- a/CC31B-TeamRAR/MainWindow.xaml
+++ b/CC31B-TeamRAR/MainWindow.xaml
@@ -147,7 +147,7 @@
                               HeadersVisibility="Column">
                         <DataGrid.Columns>
                             <DataGridTemplateColumn Header="Image"
-                                                    Width="50"
+                                                    Width="SizeToCells" IsReadOnly="True"
                                                     >
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
